@@ -1,3 +1,9 @@
+2011-08-23  Torvald Riegel  <triegel@redhat.com>
+
+	* config/x86/tls.h: Use __x86_64__ instead of __LP64__.
+	Add X32 support.
+	* config/x86/sjlj.S: Same.
+
 2011-08-19  Torvald Riegel  <triegel@redhat.com>
 
 	* config/linux/rwlock.h: New file.
